Ajustes de mobile, web, curva azul

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -42,3 +42,9 @@ body {
   z-index: -1;
   height: 100vh;
 }
+
+.background-blue-parcial {
+  background-image: url("/assets/background-blue.svg");
+  background-position: center;
+  padding-top: 100%;
+}
